; ModuleID = '/home/carl/AnghaBench/kphp-kdb/rpc-proxy/extr_rpc-proxy.c_query_on_free.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/rpc-proxy/extr_rpc-proxy.c_query_on_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rpc_query = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 (i8**, i8**)* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @query_on_free(%struct.rpc_query* %0) #0 {
  %2 = alloca %struct.rpc_query*, align 8
  store %struct.rpc_query* %0, %struct.rpc_query** %2, align 8
  %3 = load %struct.rpc_query*, %struct.rpc_query** %2, align 8
  %4 = getelementptr inbounds %struct.rpc_query, %struct.rpc_query* %3, i32 0, i32 0
  %5 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %4, i32 0, i32 0
  %6 = load i32 (i8**, i8**)*, i32 (i8**, i8**)** %5, align 8
  %7 = icmp ne i32 (i8**, i8**)* %6, null
  br i1 %7, label %8, label %21

8:                                                ; preds = %1
  %9 = load %struct.rpc_query*, %struct.rpc_query** %2, align 8
  %10 = getelementptr inbounds %struct.rpc_query, %struct.rpc_query* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i32 (i8**, i8**)*, i32 (i8**, i8**)** %11, align 8
  %13 = load %struct.rpc_query*, %struct.rpc_query** %2, align 8
  %14 = getelementptr inbounds %struct.rpc_query, %struct.rpc_query* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = load i32 (i8**, i8**)*, i32 (i8**, i8**)** %15, align 8
  %17 = bitcast i32 (i8**, i8**)* %16 to i8**
  %18 = getelementptr inbounds i8*, i8** %17, i64 1
  %19 = bitcast %struct.rpc_query** %2 to i8**
  %20 = call i32 %12(i8** %18, i8** %19)
  br label %24

21:                                               ; preds = %1
  %22 = load %struct.rpc_query*, %struct.rpc_query** %2, align 8
  %23 = call i32 @default_on_free(%struct.rpc_query* %22)
  br label %24

24:                                               ; preds = %21, %8
  ret void
}

declare dso_local i32 @default_on_free(%struct.rpc_query*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
